# enhancement-routing-detection

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
docs/: REPRODUCTION.md
scripts/: download_coco_subset.py  evaluate.py  make_figures.py  prepare_data.py  run_experiments.py
src/enhancement_routing/: __init__.py  data.py  methods.py  metrics.py  plots.py  utils.py
